# finance

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
contas/: admin.py  models.py  urls.py  views.py
contas/migrations/: 0001_initial.py
contas/templates/: definir_contas.html  ver_contas.html
core/: settings.py  urls.py
extrato/: admin.py  models.py  urls.py  views.py
extrato/migrations/: 0001_initial.py
extrato/templates/: novo_valor.html  view_extrato.html
perfil/: admin.py  models.py  urls.py  utils.py  views.py
perfil/migrations/: 0001_initial.py
perfil/templates/: dashboard.html  gerenciar.html  home.html
planejamento/: urls.py  views.py
planejamento/templates/: definir_planejamento.html  ver_planejamento.html
templates/base/: base.html
